data/derived/comb/progs/unify/prog8199.ml.out
Characters 131-143:
  |_ -> [remainder h i] @ [(i * h)/10] + mulByDigit i t;;
                          ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
